Created initial project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="hidden">
-      <h1>Diligence</h1>
+      <h1>Diligence and Focus</h1>
       <p>The diligence shall bear rule. Money follows competence.</p>
       <p>The more problems you solve the better you become.</p>
     </section>
